<resources>
    <string name="app_name">LukaJojua</string>

    <string name="sing_up">Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>

    <string name="name_title">Name: %1$s</string>
    <string name="email_title">Email: %1$s</string>
    <string name="phone_number_title">Phone number: %1$s</string>
</resources>